--- a/weather/weather_app/pubspec.yaml
+++ b/weather/weather_app/pubspec.yaml
@@ -63,6 +63,7 @@ flutter:
     - assets/images/bg.png
     - assets/icons/burger.png
     - assets/icons/plus.png
+    - assets/icons/pressure.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
